@@ -1,3 +1,8 @@
+2004-03-16  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/pentax/exif-mnote-data-pentax.c: Another suggestion by
+	  Joerg Hoh <joerg@devone.org>.
+
 2004-03-15  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/pentax/mnote-pentax-entry.c: Joerg Hoh <joerg@devone.org>
